--- a/docassemble/209aPlaintiffMotionToModify/data/questions/209a_plaintiff_s_motion_to_modify.yml
+++ b/docassemble/209aPlaintiffMotionToModify/data/questions/209a_plaintiff_s_motion_to_modify.yml
@@ -388,14 +388,14 @@ attachment code: a_plaintiff_s_motion_to_modify_qc_v20009_attachment
 section: Download
 decoration: file-download
 question: |
-  Review and download
+  Download
 subquestion: |
   ${users[0].familiar()}, now your form is ready to give to the court. 
 
   1. Tap the preview image below to open the form in a new window.
   1. Download, save, email, or print a copy of this form for your 
   records.
-  1. Mail or take the form by hand to ${ courts[0] }.
+  1. Call ${ courts[0] } at **${ courts[0].phone }** and ask what you should do next.
 
   The Trial Court’s Emergency HelpLine is 833-91-COURT (833-912-6878). 
   
