--- a/docassemble/209aPlaintiffMotionToModify/data/questions/209a_plaintiff_s_motion_to_modify.yml
+++ b/docassemble/209aPlaintiffMotionToModify/data/questions/209a_plaintiff_s_motion_to_modify.yml
@@ -1,5 +1,6 @@
 include:
-  - docassemble.MAVirtualCourt:basic-questions.yml
+  - docassemble.AssemblyLine:al_package.yml
+  - docassemble.MassAccess:massaccess.yml
 ---
 metadata:
   title: |
@@ -56,7 +57,7 @@ code: |
       ],
     'fields': [
       {'variable': 'court_division',
-       'transformed_variable': 'courts[0].division',
+       'transformed_variable': 'trial_court.division',
       'field_type': 'text',
       'field_data_type': 'text',
       },
@@ -88,13 +89,17 @@ code: |
   allowed_courts = interview_metadata["a_plaintiff_s_motion_to_modify_qc_v20009"]["allowed courts"]
   set_establishing_vars = True
 ---
+objects:
+  - users: ALPeopleList.using( target_number=1, ask_number=True )
+  - other_parties: ALPeopleList.using( target_number=1, ask_number=True )
+---
 id: interview_order_a_plaintiff_s_motion_to_modify_qc_v20009
 mandatory: True
 code: |
   set_establishing_vars
   # This is a placeholder to control logic flow in this interview
   # It was generated from interview_generator.py as an 'interview order' type question.
-  basic_questions_intro_screen 
+  al_intro_screen
   a_plaintiff_s_motion_to_modify_qc_v20009_intro
 
   # Custom code
@@ -104,14 +109,10 @@ code: |
   # users[0].address.address
   # users[0].mobile_number
   # form requires court division name
-  courts[0]
   user_ask_role = 'plaintiff'
-  users[0].name.first
-  users.there_is_another = False 
-  users.gathered = True
-  other_parties[0].name.first
-  other_parties.there_is_another = False 
-  other_parties.gathered = True
+  users.gather()
+  trial_court
+  other_parties.gather()
   order_type
   if order_type == "modify": 
     what_to_modify
@@ -139,34 +140,31 @@ question: |
 subquestion: |
   Look at your Abuse Prevention Order. 
   
-  In the middle of the top row, see the docket number the court has given your case. 
+  In the middle of the top row, see the docket number the court has given your case.
   
   What is it?
 fields:
   - no label: docket_number
 ---
 id: defendant name
+sets:
+  - other_parties[0].name.first
+  - other_parties[0].name.last
 question:  |
   What is the defendant's name?
 fields:
-  - First Name: other_parties[0].name.first
-  - Middle Name: other_parties[0].name.middle
-    required: False
-  - Last Name: other_parties[0].name.last
-  - Suffix: other_parties[0].name.suffix
-    code: |
-      name_suffix()
-    required: False  
+  - code: |
+      other_parties[0].name_fields()
 ---
-id: form to sign
-# For consistency between interviews and to allow access from outside
-code: |
-  form_to_sign = pdf_concatenate( a_plaintiff_s_motion_to_modify_qc_v20009_attachment_preview, filename='Plaintiff Motion to Modify or Terminate an Abuse Prevention Order (Preview).pdf' )
+#id: form to sign
+## For consistency between interviews and to allow access from outside
+#code: |
+#  form_to_sign = pdf_concatenate( a_plaintiff_s_motion_to_modify_qc_v20009_attachment_preview, filename='Plaintiff Motion to Modify or Terminate an Abuse Prevention Order (Preview).pdf' )
 ---
-id: signed form without cover page
-# For consistency between interviews and to allow access from outside
-code: |
-  form_to_file_no_cover = pdf_concatenate( a_plaintiff_s_motion_to_modify_qc_v20009_attachment, filename='Plaintiff Motion to Modify or Terminate an Abuse Prevention Order.pdf' )
+#id: signed form without cover page
+## For consistency between interviews and to allow access from outside
+#code: |
+#  form_to_file_no_cover = pdf_concatenate( a_plaintiff_s_motion_to_modify_qc_v20009_attachment, filename='Plaintiff Motion to Modify or Terminate an Abuse Prevention Order.pdf' )
 ---
 id: motion to modify intro
 continue button field: a_plaintiff_s_motion_to_modify_qc_v20009_intro
@@ -295,7 +293,7 @@ fields:
       ${ what_to_modify + ". " + reason }
 ---
 sets:
-  - courts[0]
+  - trial_court
 id: choose a court from list
 question: |
   What court is your case in?
@@ -306,42 +304,13 @@ subquestion: |
   
   Select that court from the list below:
 fields:
-  - no label: courts[0]
+  - no label: trial_court
     datatype: object
     object labeler: |
       lambda y: y.short_label()
-    choices: macourts.filter_courts(allowed_courts)
----
-id: Signing under oath
-question: |
-  Signing under oath 
-subquestion: |
-  When you sign your name you are saying "{under penalty of perjury}” that what you wrote is {true to the best of your knowledge}.
-  
-  Do you swear under penalty of perjury that all your answers to the questions in this interview are true, to the best of your knowledge?
-fields:
-  - no label: users[0].states_above_true
-    datatype: checkboxes
-    minlength: 1
-    choices:
-      - I swear that my answers on this form are the truth under penalties of perjury.
-    validation messages:
-      minlength: |
-        You cannot keep going unless you did your best to tell the truth.
-terms:
-  - under penalty of perjury: |
-      Swearing "under penalty of perjury" means you swear your answers are true, as far as you know.  
-         
-      The court can punish you if your answers are not true to the best of your knowledge.  
-      
-      The court cannot punish you if your answers are about things you saw, heard, or felt.  
-      The court cannot punish you if you have good reason to believe that your answers are true.
-  - true to the best of your knowledge: |
-      Something is true "to the best of your knowledge" if you were there and saw, heard, or felt it.  
-      Something is true "to the best of your knowledge" if you have good reason to believe it is true.
+    choices: all_courts.filter_courts(allowed_courts)
 ---
 id: review before signature
-need: form_to_sign
 continue button field: a_plaintiff_s_motion_to_modify_qc_v20009_preview_question
 question: |
   Nearly finished
@@ -354,54 +323,32 @@ subquestion: |
   
   Remember to come back to this page to go on to sign the form.
   
-  ${form_to_sign }
+  ${ al_user_bundle.as_pdf( key='preview' ) }
    
   ${action_button_html( url_action('review_A_plaintiff_s_motion_to_modify'), icon='edit', label=word("Make changes") )}
 
 progress: 95
 ---
-id: preview
-reconsider: True
-attachment:
-    variable name: a_plaintiff_s_motion_to_modify_qc_v20009_attachment_preview
-    name: Plaintiff\'s Motion to Modify or Terminate an Abuse Prevention Order - 209a
-    filename: Plaintiffs-Motion-to-Modify-209a
-    pdf template file: 209A_plaintiff_s_motion_to_modify.pdf
-    editable: False
-    fields: 
-      - "docket_number": ${ docket_number }
-      - "plaintiff_name": ${ users }
-      - "defendant_name": ${ other_parties }
-      - "plaintiff_name__1": ${ users }
-      - "court_division": ${ courts[0] }
-      - "modify_order": ${ order_type == "modify" }
-      - "terminate_order": ${ order_type == "terminate" }
-      - "plaintiff_statement": ${ (what_to_modify + ". " + reason) if order_type == "modify" else reason }
-      - "understand_yes": ${ understand_yes }
-      - "signature_date": ${ signature_date }
----
 id: download form
-need: form_to_file_no_cover 
 event: download_form
 progress: 100
-attachment code: a_plaintiff_s_motion_to_modify_qc_v20009_attachment
 section: Download
 decoration: file-download
 question: |
   Download
 subquestion: |
-  ${users[0].familiar()}, now your form is ready to give to the court. 
+  ${ users[0].familiar() }, now your form is ready to give to the court. 
 
-  % if defined( 'courts[0].phone' ) and courts[0].phone:
+  % if defined( 'trial_court.phone' ) and trial_court.phone:
   1. Tap the preview image below to open the form in a new window.
   1. Download, save, email, or print a copy of this form for your 
   records.
-  1. Call ${ courts[0] } at **${ courts[0].phone }** and ask them how they want you to deliver the form to the court.
+  1. Call ${ trial_court } at **${ trial_court.phone }** and ask them how they want you to deliver the form to the court.
   % else:
   1. Tap the preview image below to open the form in a new window.
   1. Download, save, email, or print a copy of this form for your 
   records.
-  1. Look up the number of ${ courts[0] } and call them to ask them how they want you to deliver the form to the court.
+  1. Look up the number of ${ trial_court } and call them to ask them how they want you to deliver the form to the court.
   % endif
 
   The Trial Court’s Emergency HelpLine is 833-91-COURT (833-912-6878). 
@@ -410,30 +357,36 @@ subquestion: |
   8:30am - 4:30pm, [BR]  
   Monday - Friday.
   
-  ${ form_to_file_no_cover }
-  
   ${action_button_html( url_action('review_A_plaintiff_s_motion_to_modify'), icon='edit', label=word("Make changes") )} 
+  ${ al_user_bundle.download_list_html( key='final' ) }
+  
+  ${ al_user_bundle.send_button_html( key='final' ) }
+---
+objects:
+  - al_court_bundle: ALDocumentBundle.using(elements=[plaintiff_modify_209A_attachment], filename="209A_plaintiff_s_motion_to_modify.pdf", title="All forms to send to the court")
+  - al_user_bundle: ALDocumentBundle.using(elements=[plaintiff_modify_209A_attachment], filename="plaintiffs-motion-to-change-or-end-209A-restraining-order.pdf", title="Form to download")
+---
+objects:
+  - plaintiff_modify_209A_attachment: ALDocument.using( enabled=True, has_addendum=False, title='Plaintiff\'s Motion to Change or End 209A Restraining Order', filename='plaintiffs-motion-to-change-or-end-209A-restraining-order.pdf' )
 ---
 id: motion to modify attachment
-reconsider: True
 attachment:
-    variable name: a_plaintiff_s_motion_to_modify_qc_v20009_attachment
-    name: Plaintiff\'s Motion to Modify or Terminate an Abuse Prevention Order - 209a
-    filename: Plaintiffs-Motion-to-Modify-209a
+    variable name: plaintiff_modify_209A_attachment[i]
     pdf template file: 209A_plaintiff_s_motion_to_modify.pdf
+    skip undefined: True
     editable: False    
     fields: 
       - "docket_number": ${ docket_number }
       - "plaintiff_name": ${ users }
       - "defendant_name": ${ other_parties }
       - "plaintiff_name__1": ${ users }
-      - "court_division": ${ courts[0] }
+      - "court_division": ${ trial_court }
       - "modify_order": ${ order_type == "modify" }
       - "terminate_order": ${ order_type == "terminate" }
       - "plaintiff_statement": ${ (what_to_modify + ". " + reason) if order_type == "modify" else reason }
       - "understand_yes": ${ understand_yes }
       - "signature_date": ${ signature_date }
-      - "user_signature": ${ users[0].signature }
+      - "user_signature": ${ users[0].signature_if_final( i ) }
 ---
 id: A_plaintiff_s_motion_to_modify review screen
 event: review_A_plaintiff_s_motion_to_modify
@@ -494,10 +447,10 @@ review:
         **Your reason for **ending** your prevention order**:[BR]
       % endif
       ${ reason }
-  - Edit: courts[0]
+  - Edit: trial_court
     button: |
       **Court where you filed your original order**:[BR]
-      ${ courts[0] }
+      ${ trial_court }
   - Edit: signature_date
     button: |
       **Date you will file this form with the court**:[BR]
