Close #66, make metadata plain language

--- a/docassemble/209aPlaintiffMotionToModify/data/questions/209a_plaintiff_s_motion_to_modify.yml
+++ b/docassemble/209aPlaintiffMotionToModify/data/questions/209a_plaintiff_s_motion_to_modify.yml
@@ -4,9 +4,9 @@ include:
 ---
 metadata:
   title: |
-    209A Plaintiff's Motion to Modify an Abuse Prevention Order
+    209A Plaintiff's Motion to Change an Abuse Prevention Order
   short title: |
-    209A Plaintiff's Motion to Modify
+    209A Plaintiff's Motion to Change
   description: |
     If the plaintiff already has a restraining order, they can ask the court to change or end it.
 ---
