--- a/docassemble/209aPlaintiffMotionToModify/data/questions/209a_plaintiff_s_motion_to_modify.yml
+++ b/docassemble/209aPlaintiffMotionToModify/data/questions/209a_plaintiff_s_motion_to_modify.yml
@@ -195,7 +195,7 @@ subquestion: |
   
   You need a copy of your restraining order to answer the next set of questions. 
   
-  Note: If you are the defendant in this case and you need to ask the court to change or end the order, it is important to talk to a lawyer. [Massachusetts Legal Resource Finder <i class="fas fa-external-link-alt"></i>](https://masslrf.org/en/home) is one place you can look for a lawyer.
+  Note: If you are the defendant in this case and you need to ask the court to change or end the order, it is important to talk to a lawyer. [Massachusetts Legal Resource Finder <i class="fas fa-external-link-alt"></i>](https://masslrf.org/en/triage/start/abuse_crime) is one place you can look for a lawyer.
 fields:
   - no label: is_plaintiff
     datatype: checkboxes
