--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "test": "npm run langs_setup && npm run cucumber -- $@",
     "cucumber_base": "./node_modules/.bin/cucumber-js --require ./node_modules/docassemble-cucumber/lib/index.js",
-    "cucumber": "run_cucumber(){ npm run cucumber_base -- \"$@\" tests/features/*.feature; }; run_cucumber",
-    "langs": "npm run langs_setup && ./node_modules/.bin/cucumber-js --require ./node_modules/docassemble-cucumber/lib/index.js tests/features/*_lang*.feature",
-    "langs_setup": "node_modules/.bin/da-langs 'tests/features/*.feature'",
+    "cucumber": "run_cucumber(){ npm run cucumber_base -- \"$@\" docassemble/*/data/sources/*.feature; }; run_cucumber",
+    "langs": "npm run langs_setup && ./node_modules/.bin/cucumber-js --require ./node_modules/docassemble-cucumber/lib/index.js docassemble/*/data/sources/*_lang*.feature",
+    "langs_setup": "node_modules/.bin/da-langs 'docassemble/*/data/sources/*.feature'",
     "langs_local": "npm run langs_setup && npm run local",
     "local": "npm run setup && npm run cucumber; npm run takedown",
     "setup": "node_modules/.bin/da-setup",
@@ -19,14 +19,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SuffolkLITLab/docassemble-209aPlaintiffMotionToModify.git"
+    "url": "git+https://github.com/suffolkLITLab/docassemble-209aPlaintiffMotionToModify.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/SuffolkLITLab/docassemble-209aPlaintiffMotionToModify/issues"
+    "url": "https://github.com/suffolkLITLab/docassemble-209aPlaintiffMotionToModify/issues"
   },
-  "homepage": "https://github.com/SuffolkLITLab/docassemble-209aPlaintiffMotionToModify#readme",
+  "homepage": "https://github.com/suffolkLITLab/docassemble-209aPlaintiffMotionToModify#readme",
   "dependencies": {
     "bufferutil": "^4.0.1",
     "chai": "^4.2.0",
