--- a/.github/workflows/update-interview.yml
+++ b/.github/workflows/update-interview.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       issues: write
+      repository-projects: write
     steps:
       - name: Create update-interview issue
         run: |
